--- a/lambda/public/index.html
+++ b/lambda/public/index.html
@@ -45,7 +45,7 @@
         <div class = "row text-center">
             <div class = "col-md-6">
                 <p class = "title">Video for Helping Hand</p>
-                <iframe class = "img-fluid"  src="https://www.youtube.com/embed/dA438RpaQ7g?si=c4KKfh4qDT5U1Ot3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class = "img-fluid" src="https://www.youtube.com/embed/HJ_LRTBT3E8?si=DQnE-eCaAE3NIzww" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
             <div class = "col-md-6">
                 <p class = "title">Code</p>
